Fixed mobile issue with keyboard distortion

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,6 @@
+html{
+    height: -webkit-fill-available;
+}
 body{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -5,6 +8,7 @@ body{
 
 #main{
     height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 h1{
